handle user id for the sensitivity analysis
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>